--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -28,6 +28,10 @@
 		<%= f.text_field :quantity %>
 	</div>
 	<div class="field">
+		<%= f.label :notes %><br>
+		<%= f.text_area :notes%>
+	</div>
+	<div class="field">
 		<%= f.label :marked, "Bought Already?" %><br>
 		<%= f.check_box :marked %> 
 	</div>
