--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -27,6 +27,10 @@
 		<%= f.label :quantity %><br>
 		<%= f.text_field :quantity %>
 	</div>
+	<div class-"field">
+		<%= f.label :unit %><br>
+		<%= f.text_field :unit %>
+	</div>
 	<div class="field">
 		<%= f.label :notes %><br>
 		<%= f.text_area :notes%>
