--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -7,6 +7,7 @@ body {
 }
 footer { margin-top: 100px; text-align: center; }
 table { vertical-align: middle; border: none; border-collapse: separate; border-spacing: 20px; }
+table.index {width: 100%; }
 td, th { vertical-align: middle; border: none; }
 td.item_name { vertical-align: middle; border: none; font-family: 'Shadows Into Light', cursive; font-size: 24px; }
 th { border-bottom: 1px solid #DDD; }
