--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -23,6 +23,9 @@
     <%= f.label :picture %><br>
     <%= f.file_field :picture %>
   </div>
+	
+	<!-->Add picture from URL<-->
+	
 	<div class="field">
 		<%= f.label :quantity %><br>
 		<%= f.text_field :quantity %>
